Hide inputs; block styling to prevent gene tabs wrapping to the line above.

--- a/context/app/static/extra.css
+++ b/context/app/static/extra.css
@@ -56,6 +56,10 @@ pre {
 	animation: fadein 0.5s ease-in 0.2s forwards;
 }
 
+.tab-pane {
+	display: block;
+}
+
 /* Slight delay on "Please Wait" to reduce flicker */
 @keyframes fadein {
 	0% {
